moving #chatwrap left out of @media to fix movechat

--- a/base.css
+++ b/base.css
@@ -251,7 +251,6 @@ div#videowrap {
 		display: block;
 		position: fixed;
 		bottom: 0;
-		left: 1px;
 		margin-bottom: 0;
 	}
 	#mainpage > .nano {
@@ -947,4 +946,7 @@ background: none;
 }
 #maincontain {
 	right: 1px;
+}
+#chatwrap {
+	left: 1px;
 }
